--- a/index.html
+++ b/index.html
@@ -7,6 +7,28 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+
+  <!-- <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.2.3/d3.min.js"></script> -->
+  <script src="https://d3js.org/d3.v3.min.js"></script>
+
+  <script src="https://code.highcharts.com/highcharts.js"></script>
+  <script src="https://code.highcharts.com/modules/sunburst.js"></script>
+  <!-- <script src="https://code.highcharts.com/modules/exporting.js"></script> -->
+
+  <!-- <script src="https://code.highcharts.com/highcharts.js"></script> -->
+  <script src="https://code.highcharts.com/highcharts-3d.js"></script>
+  <script src="https://code.highcharts.com/modules/exporting.js"></script>
+  <script src="https://code.highcharts.com/modules/export-data.js"></script>
+  <script src="https://code.highcharts.com/modules/accessibility.js"></script>
+
+  <script type="text/javascript" src="static/js/esg_3d_chart.js"></script>
+
+  <script type="text/javascript" src="static/js/esg_sunburst.js"></script>
+
+  <script type="text/javascript" src="static/js/esg_scroll_bar.js"></script>
+  
+  <link rel="stylesheet" type="text/css" href="static/css/style.css">
+
   <style>
     /* Set height of the grid so .sidenav can be 100% (adjust as needed) */
     .row.content {height: 550px}
@@ -23,6 +45,8 @@
     }
   </style>
   <marquee behavior="scroll" direction="right">Here is some scrolling text... left to right!</marquee>
+
+
 
 </head>
 <body>
@@ -63,8 +87,22 @@
     
     <div class="col-sm-9"> <!--heading: name and explanation-->
       <div class="well">
-        <h4>SITE NAME</h4>
+        <h2 class="inline">ESG</h2> <h3 class="inline">Investment for Better World</h3>
         <p>This will be a short explanation. </p>
+
+        <div id="sunburst_container"></div>
+
+        <figure class="highcharts-figure">
+          <div id="3d_chart_container"></div>
+          <p class="highcharts-description">
+
+              Chart showing grouped and stacked 3D columns. These features are
+              available both for 2D and 3D column charts.
+          </p>
+      </figure>
+
+      <div id="scroll_bar_container"></div>
+
       </div>
       <div class="row">
         <div class="col-sm-6"> <!--TEXT Info of company-->
@@ -105,6 +143,13 @@
     </div>
   </div>
 </div>
+
+<!-- <script src="https://code.highcharts.com/highcharts.js"></script>
+  <script src="https://code.highcharts.com/highcharts-3d.js"></script>
+  <script src="https://code.highcharts.com/modules/exporting.js"></script>
+  <script src="https://code.highcharts.com/modules/export-data.js"></script>
+  <script src="https://code.highcharts.com/modules/accessibility.js"></script> -->
+
 
 </body>
 </html>
